--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,6 +19,7 @@
                     <img src="/img/icons/logo.png" alt="Логотип">
                     <a href="/">AR-OPTIMA</a>
                 </div>
+                <img class="mobile-banner" src="/img/icons/nft.png" alt="NFT">
                 <div class="banner">
                     <span class="highlighted-text">ДОПОЛНЕННАЯ</span> РЕАЛЬНОСТЬ В ТВОЁМ ДОМЕ
                 </div>
@@ -63,8 +64,8 @@
                         <a href="/service?serviceId=3">получении NFT-токена на ваше произведение!</a></p>
                 </div>
             </div>
+            {{>modalToggler}}
             <div class="col info-nav-container">
-                {{>modalToggler}}
                 <nav class="col">
                     <a class="info-nav-link" data-target="what-is-it" href="#">Что это такое?</a>
                     <a class="info-nav-link" data-target="who-we-are" href="#">Кто мы такие?</a>
