--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -112,42 +112,17 @@ body{
   right: 0;
   top:0;
   background-color: $primary-col;
-  z-index: 2;
+  z-index: 4;
   overflow: hidden;
   opacity: 0;
   header{
     height: 120px;
     background-color: 2px solid white;
     border: 2px solid white;
-    .col{
-      width: 50%;
-      justify-content: center;
-      align-items: center;
-      a{
-        color: white;
-      }
-      .user-avatar{
-        filter: invert(100%);
-      }
-      img{
-        object-fit: contain;
-        width: 60%;
-
-      }
-    }
-  }
-  .search-form{
-    border: 2px solid white;
-    color:white;
-    padding: 10px;
-    justify-content: space-evenly;
-    input{
-      background-color: white;
-    }
-    button{
-      padding: 10px;
-      color:white;
-      border:1px solid white;
+    justify-content: center;
+    align-items: center;
+    img{
+      height: 80%;
     }
   }
   nav{
@@ -169,6 +144,7 @@ body{
 
 //Модальное мнею тоглер
 .side-menu{
+  z-index: 3;
   width: 255px;
   border:2px solid white;
   height: 120px;
@@ -252,6 +228,9 @@ body{
         font-weight: bold;
         color:white;
       }
+    }
+    .mobile-banner{
+      display: none;
     }
     .banner{
       font-size: 3.3em;
@@ -382,6 +361,7 @@ body{
     width: 100%;
     justify-content: space-evenly;
     margin: 14px 0;
+    flex-wrap: wrap;
     .teammate{
       @include teammateCard();
       @include volumeShadow(darkred);
@@ -410,6 +390,10 @@ body{
   .demo-container{
     align-items: center;
     margin:20px 0;
+    overflow: hidden;
+    img{
+      max-width: 100%;
+    }
   }
 }
 #personal-model{
@@ -452,6 +436,7 @@ body{
   //Один тиммейт
   .current-teammate-container{
     .current-teammate-top{
+      padding: 10px;
       >.col{
         width: 50%;
         justify-content: center;
@@ -539,6 +524,20 @@ body{
       }
     }
   }
+  //Форма оставления комментария
+  .current-product-comment-form{
+    @include mainForm();
+  }
+  //Все комментари
+  .current-product-comments{
+    margin:24px 0;
+    .comment{
+      @include comment();
+    }
+    .comment-active{
+      height: auto !important;
+    }
+  }
   //Один сервис
   .current-service-container{
 
@@ -576,8 +575,12 @@ body{
     margin:30px 0;
   }
   .personal-user-container{
+    justify-content: space-around;
     align-items: center;
+    margin: 14px 0;
+    flex-wrap: wrap;
     .personal-user-settings{
+      margin: 14px 0;
       padding:20px 14px;
       max-width: 400px;
       border: 4px solid black;
@@ -623,32 +626,20 @@ body{
   }
   .all-user-purchases{
     justify-content: space-between;
+    flex-wrap: wrap;
     .top-product{
       @include card();
     }
   }
   .form-work{
-    padding: 14px;
-    textarea{
-      font-size: 1.05em;
-      padding: 4px;
-    }
-    .form-controls{
-      justify-content: space-evenly;
-      height: 60px;
-      button{
-        height: 100%;
-        width: 50%;
-        font-size: 1.05em;
-        color:white;
-      }
-      .btn-pos{
-        background-color: #2d4972;
-      }
-      .btn-neg{
-        background-color: #c81818;
-      }
-    }
+    @include mainForm();
+  }
+  .invoice-error{
+    margin:14px 0;
+    color:red;
+    font-weight: bold;
+    font-size: 1.2em;
+    text-align: center;
   }
 }
 
