--- a/views/auth.hbs
+++ b/views/auth.hbs
@@ -19,16 +19,23 @@
                 <button id="reg-btn-show" data-target="register-form-container">Регистрация</button>
                 <button id="auth-btn-show" data-target="login-form-container">Авторизация</button>
             </div>
-            <div id="auth-register" class="auth-forms-container row">
-                <div class="form-container row register-form-container form-container-active">
+            <div class="auth-forms-container row">
+                <div id="auth-register" class="form-container row register-form-container form-container-active">
                     <form class="register-form col" action="auth/register" method="post" enctype="multipart/form-data">
-                        <header class="row">
-                            <h3>Регистрация</h3>
+                        <header class="col">
+                            <h3>Регистрация:</h3>
+                            {{#if regError}}
+                                <div class="auth-error">{{regError}}</div>
+                            {{/if}}
                         </header>
                         <label for="reg-login-input">Логин:</label>
                         <input type="text" id="reg-login-input" name="regLogin">
+                        <label for="reg-email-input">Email:</label>
+                        <input type="email" id="reg-email-input" name="regEmail">
                         <label for="reg-password-input">Пароль:</label>
                         <input type="password" id="reg-password-input" name="regPassword">
+                        <label for="reg-password-confirm-input">Повторите пароль:</label>
+                        <input type="password" id="reg-password-confirm-input" name="regPasswordConfirm">
                         <label for="reg-image-input">Аватар:</label>
                         <input type="file" id="reg-image-input" name="regAvatar">
                         <div class="row form-controls">
