--- a/views/service.hbs
+++ b/views/service.hbs
@@ -31,8 +31,8 @@
                 <label for="work-description-input">Ваши пожелания:</label>
                 <textarea name="workDescription" id="work-description-input" cols="30" rows="10"></textarea>
                 <div class="form-controls row">
-                    <button class="btn-pos" name="workAddBtn" value="{{service.id}}">ОК</button>
-                    <button class="btn-neg">Стереть</button>
+                    <button class="btn-pos" name="workAddBtn" value="{{service.id}}" type="submit">ОК</button>
+                    <button class="btn-neg" type="reset">Стереть</button>
                 </div>
             </form>
             {{else}}
@@ -57,14 +57,51 @@
 
         });
 
-        const horizontalSwiper = new Swiper('.swiper-horizontal-container',{
-            loop:true,
-            navigation: {
-                nextEl: '.swiper-button-next',
-                prevEl: '.swiper-button-prev',
-            },
-            slidesPerView:3
+        let horizontalSwiper = '';
+
+        window.addEventListener('load',function (e) {
+            let slidesPerView = 3
+            if (this.innerWidth <= 1000) {
+                slidesPerView = 2;
+                if (this.innerWidth < 768) {
+                    slidesPerView = 1;
+                }
+            } else {
+                slidesPerView = 3;
+            }
+
+            horizontalSwiper = new Swiper('.swiper-horizontal-container', {
+                loop: true,
+                navigation: {
+                    nextEl: '.swiper-button-next',
+                    prevEl: '.swiper-button-prev',
+                },
+                slidesPerView: slidesPerView
+            })
         });
+
+
+        window.addEventListener('resize', function (e) {
+            let slidesPerView = 3;
+            if (this.innerWidth <= 1000) {
+                slidesPerView = 2;
+                if (this.innerWidth < 768) {
+                    slidesPerView = 1;
+                }
+            } else {
+                slidesPerView = 3;
+            }
+
+            horizontalSwiper = new Swiper('.swiper-horizontal-container', {
+                loop: true,
+                navigation: {
+                    nextEl: '.swiper-button-next',
+                    prevEl: '.swiper-button-prev',
+                },
+                slidesPerView: slidesPerView
+            });
+        });
+
     </script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </body>
