--- a/public/scss/_vars.scss
+++ b/public/scss/_vars.scss
@@ -1,5 +1,8 @@
 $primary-col: #415167;
-$accent-brown-col: #c7a17a;
-$accent-white-col: #F9F5E8;
-$dark-gray-col: #151D28;
-$light-gray-col: #EDF0F5;
+$primary-blue-col:#123C69;
+$primary-red-col:#AC3B61;
+$accent-brown-col: #EDC7B7;
+$accent-white-col: #EEE2DC;
+$light-gray-col: #BAB2B5;
+
+
