--- a/views/admin-auth.hbs
+++ b/views/admin-auth.hbs
@@ -16,8 +16,8 @@
             <label for="admin-password-input">Пароль:</label>
             <input name="adminPassword" type="password" id="admin-password-input">
             <div class="form-controls row">
-                <button>ОК</button>
-                <button>Стереть</button>
+                <button class="btn-pos">ОК</button>
+                <button class="btn-neg">Стереть</button>
             </div>
         </form>
     </div>
