--- a/views/auth.hbs
+++ b/views/auth.hbs
@@ -39,8 +39,8 @@
                         <label for="reg-image-input">Аватар:</label>
                         <input type="file" id="reg-image-input" name="regAvatar">
                         <div class="row form-controls">
-                            <button type="submit">ОК</button>
-                            <button type="reset">Стереть</button>
+                            <button class="btn-pos" type="submit">ОК</button>
+                            <button class="btn-neg" type="reset">Стереть</button>
                         </div>
                     </form>
                 </div>
@@ -57,8 +57,8 @@
                         <label for="log-password-input">Пароль:</label>
                         <input type="password" id="log-password-input" name="logPassword">
                         <div class="row form-controls">
-                            <button type="submit">ОК</button>
-                            <button type="reset">Стереть</button>
+                            <button class="btn-pos" type="submit">ОК</button>
+                            <button class="btn-neg" type="reset">Стереть</button>
                         </div>
                     </form>
                 </div>
