--- a/views/personal.hbs
+++ b/views/personal.hbs
@@ -31,7 +31,7 @@
                             </div>
                         </div>
                         <div class="form-controls row">
-                            <button>ОК</button>
+                            <button class="btn-pos">ОК</button>
                         </div>
                     </form>
                 </div>
@@ -43,7 +43,7 @@
                             <img src="/img/icons/pencil.png" data-target="personal-user-login-input" alt="Изменить" class="change-pencil">
                         </div>
                         <div class="form-controls row">
-                            <button>ОК</button>
+                            <button class="btn-pos">ОК</button>
                         </div>
                     </form>
 
@@ -54,7 +54,7 @@
                             <img src="/img/icons/pencil.png" data-target="personal-user-password-input" alt="Изменить" class="change-pencil">
                         </div>
                         <div class="form-controls row">
-                            <button>ОК</button>
+                            <button class="btn-pos">ОК</button>
                         </div>
                     </form>
 
@@ -65,7 +65,7 @@
                             <img src="/img/icons/pencil.png" data-target="personal-user-email-input" alt="Изменить" class="change-pencil">
                         </div>
                         <div class="form-controls row">
-                            <button>ОК</button>
+                            <button class="btn-pos">ОК</button>
                         </div>
                     </form>
                 </div>
