--- a/public/scss/_mixins.scss
+++ b/public/scss/_mixins.scss
@@ -1,13 +1,13 @@
 @mixin card(){
   width: 350px;
-  height: 170px;
+  height: 170px !important;
   background-color: rgba(252, 237, 237, 0.8);
   margin: 14px;
   .card-img{
     align-items: center;
     justify-content: center;
-    background-color: $light-gray-col;
-    width: 40%;
+    background-color: $accent-white-col;
+    width: 130px;
     img{
       max-height: 80%;
       max-width: 100%;
@@ -17,6 +17,10 @@
     align-items: center;
     justify-content: space-evenly;
     text-align: center;
+    h3{
+      max-width: 200px;
+      padding: 4px;
+    }
     .row{
       justify-content: center;
       align-items: center;
@@ -42,12 +46,12 @@
 @mixin form(){
   max-width: 400px;
   width: 100%;
-  border:8px solid $primary-col;
+  //border:8px solid $primary-col;
   border-radius: 25px;
   justify-content: space-evenly;
   align-items: center;
-  padding: 14px;
-  background-color: $accent-white-col;
+  padding:20px 14px;
+  background-color: $accent-brown-col;
   .auth-error{
     color:darkred;
   }
@@ -76,9 +80,11 @@
     font-size: 1em;
     font-family: PoiretOne,'sans-serif';
     font-weight: bold;
-    margin:4px 0;
-    background-color: #EDF0F5;
+    margin:8px 0;
+    background-color:$accent-white-col ;
     width: 360px;
+    border:none;
+    border-bottom: 2px solid $primary-col;
   }
   .form-controls{
     justify-content: space-between;
@@ -90,6 +96,13 @@
       padding: 10px;
       width: 100px;
       border:none;
+      color:white;
+    }
+    .btn-pos{
+      background-color: $primary-blue-col;
+    }
+    .btn-neg{
+      background-color: $primary-red-col;
     }
   }
 }
@@ -104,7 +117,7 @@
   margin: 14px 10px;
   .teammate-top{
     height: 130px;
-    background-color: red;
+    background-color: #AC3B61;
     align-items: center;
     //padding: 10px 0;
     h3{
@@ -122,7 +135,7 @@
     align-self: center;
     top: -65px;
     object-fit: contain;
-    background-color: grey;
+    background-color: $accent-white-col;
   }
   .teammate-text{
     margin-top: -50px;
@@ -153,7 +166,7 @@
     width: 100%;
     height: 170px;
     object-fit: contain;
-    background-color: $light-gray-col;
+    background-color: $accent-white-col;
   }
   .personal-card-text{
     padding: 14px;
@@ -169,14 +182,14 @@
       align-items: center;
       margin: 10px;
       .personal-card-link{ //TODO миксины!
-        background-color: red;
+        background-color: $primary-red-col;
         color: white;
         padding: 8px 12px;
         margin-right: 15px;
 
       }
       .personal-card-price{
-        color:red;
+        color:$primary-red-col;
         font-weight:bold;
       }
     }
@@ -215,10 +228,10 @@
       color:white;
     }
     .btn-pos{
-      background-color: #2d4972;
+      background-color: $primary-blue-col;
     }
     .btn-neg{
-      background-color: #c81818;
+      background-color: $primary-red-col;
     }
   }
 }
