--- a/views/admin-panel.hbs
+++ b/views/admin-panel.hbs
@@ -12,9 +12,9 @@
 </head>
 <body>
     <form method="post" action="admin/moderate" class="admin-context-menu col">
-        <input name="moderateContext" type="text" id="contextModerateContext">
-        <button name="updateById" id="contextUpdateBtn">Изменить</button>
-        <button name="deleteById" id="contextDeleteBtn">Удалить</button>
+        <input name="moderateContext" type="text" id="contextModerateContext" hidden>
+        <button name="updateById" id="context-update-btn">Изменить</button>
+        <button name="deleteById" id="context-delete-btn">Удалить</button>
     </form>
     <div class="admin-toggler">
 
@@ -71,8 +71,8 @@
                             <textarea name="employStack" id="employ-stack-textarea" cols="30" rows="10">{{employStack}}</textarea>
                         </fieldset>
                         <div class="row form-controls">
-                            <button type="submit">ОК</button>
-                            <button type="reset">Стереть</button>
+                            <button class="btn-pos" type="submit">ОК</button>
+                            <button class="btn-neg" type="reset">Стереть</button>
                         </div>
                     </form>
                 </div>
@@ -116,8 +116,8 @@
                         <label for="position-main-checkbox">Ключевая?</label>
                         <input name="positionIsMain" type="checkbox" id="position-main-checkbox" {{#if positionIsMain}}checked{{/if}}>
                         <div class="row form-controls">
-                            <button>ОК</button>
-                            <button>Стереть</button>
+                            <button class="btn-pos">ОК</button>
+                            <button class="btn-neg">Стереть</button>
                         </div>
                     </form>
                 </div>
@@ -160,52 +160,64 @@
                             </div>
                         </div>
                         <div class="user-settings-control row">
-                            <form action="" class="row">
-                                <div class="form-controls row">
-                                    <button name="">Забанить</button>
-                                    <button name="">Удалить</button>
-                                </div>
-                            </form>
+                            {{#if isBanned}}
+                                <span class="warning">Пользователь был забанен!</span>
+                                <form action="admin/unbanUser" method="post" class="row" style="background-color: unset">
+                                    <div class="form-controls col">
+                                        <button class="btn-pos" name="btnUnbanUser" value="{{userId}}">Разбанить</button>
+                                    </div>
+                                </form>
+                            {{else}}
+                                <form action="admin/banUser" method="post" class="row" style="background-color: unset">
+                                    <div class="col">
+                                        <label for="ban-reason-input">Причина</label>
+                                        <input type="text" id="ban-reason-input" name="banReason">
+                                    </div>
+                                    <div class="form-controls col">
+                                        <button class="btn-neg" name="btnBanUser" value="{{userId}}">Забанить</button>
+                                    </div>
+                                </form>
+                            {{/if}}
                         </div>
                         <h3>Покупки пользователя:</h3>
-                        <div class="user-settings-products row">
-                            {{#each userPurchases}}
-                                <div class="top-product row">
-                                    <div class="col top-product-img card-img">
-                                        <img src="/img/uploads/{{this.image}}" alt="">
-                                    </div>
-                                    <div class="col top-product-text card-text">
-                                        <h3>{{this.name}}</h3>
-                                        <h4>{{this.second_name}}</h4>
-                                        <div class="row">
-                                            <a class="top-product-link card-link link-to" href="/product?productId={{this.id}}">Перейти</a>
-                                            <span class="top-product-price  card-price">{{this.price}}₽</span>
+                        <div class="user-settings-products col">
+                            <div class="col">
+                                {{#each userPurchases}}
+                                    <div class="top-product row">
+                                        <div class="col top-product-img card-img">
+                                            <img src="/img/uploads/{{this.image}}" alt="">
+                                        </div>
+                                        <div class="col top-product-text card-text">
+                                            <h3>{{this.name}}</h3>
+                                            <h4>{{this.second_name}}</h4>
+                                            <div class="row">
+                                                <a class="top-product-link card-link link-to" href="product?productId={{this.id}}">Перейти</a>
+                                                <span class="top-product-price  card-price">{{this.price}}₽</span>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                            {{/each}}
-                        </div>
-                        <h3>Услуги пользователя</h3>
-                        <div class="user-settings-services">
-
+                                {{/each}}
+                            </div>
                         </div>
                         <h3>Комментарии пользователя</h3>
-                        <div class="user-settings-reviews">
-                            {{#each userReviews}}
-                                <div class="user-settings-review row">
-                                    <div class="col">
-                                        <p>{{this.text}}</p>
-                                        <span>{{this.created_at}}</span>
+                        <div class="user-settings-reviews col">
+                            <div class="col">
+                                {{#each userReviews}}
+                                    <div class="user-settings-review row">
+                                        <div class="col">
+                                            <p>{{this.text}}</p>
+                                            <span>{{this.created_at}}</span>
+                                        </div>
+                                        <div class="col">
+                                            <form action="admin/deleteReview" method="post" style="background-color: unset">
+                                                <div class="form-controls">
+                                                    <button class="btn-neg" name="deletedReviewId" value="{{this.id}}">Удалить</button>
+                                                </div>
+                                            </form>
+                                        </div>
                                     </div>
-                                    <div class="col">
-                                        <form action="admin/deleteReview" method="post">
-                                            <div class="form-controls">
-                                                <button name="deletedReviewId" value="{{this.id}}">Удалить</button>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            {{/each}}
+                                {{/each}}
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -281,8 +293,8 @@
                             <input name="productDemoPath" type="text" id="product-demo-path-input">
                         </fieldset>
                         <div class="row form-controls">
-                            <button>OK</button>
-                            <button>Стереть</button>
+                            <button class="btn-pos">OK</button>
+                            <button class="btn-neg">Стереть</button>
                         </div>
                     </form>
                 </div>
@@ -328,8 +340,8 @@
                         <label for="service-price-input">Цена:</label>
                         <input name="servicePrice" type="number" id="service-price-input" value="{{servicePrice}}">
                         <div class="row form-controls">
-                            <button>ОК</button>
-                            <button>Стереть</button>
+                            <button class="btn-pos">ОК</button>
+                            <button class="btn-neg">Стереть</button>
                         </div>
                     </form>
                 </div>
@@ -397,8 +409,8 @@
                                     {{/each}}
                                 </select>
                                 <div class="form-controls row">
-                                    <button>OK</button>
-                                    <button>Стереть</button>
+                                    <button class="btn-pos">OK</button>
+                                    <button class="btn-neg">Стереть</button>
                                 </div>
                             </form>
                         </div>
@@ -432,12 +444,18 @@
         </section>
     </div>
 
-    <script>
+    <script type="module">
         tinymce.init({
             selector: 'textarea',
             plugins: 'advlist autolink lists link image charmap print preview hr anchor pagebreak',
             toolbar_mode: 'floating',
         });
+
+
+
+
+
+
     </script>
 </body>
 </html>
