--- a/views/partials/bottomSlider.hbs
+++ b/views/partials/bottomSlider.hbs
@@ -14,7 +14,7 @@
                                     <img src="/img/uploads/{{this.image}}" alt="" class="personal-card-img">
                                     <div class="personal-card-text">
                                         <h3>{{this.header}}</h3>
-                                        <p>{{inputHTML this.description}}</p>
+                                        <div class="personal-card-description">{{inputHTML this.description}}</div>
                                         <div class="row">
                                             <a href="/service?serviceId={{this.id}}" class="personal-card-link link-to">Перейти</a>
                                             <span class="personal-card-price price">от {{this.price}}₽</span>
