--- a/views/teammates.hbs
+++ b/views/teammates.hbs
@@ -1,14 +1,9 @@
 <!doctype html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    {{> head}}
     <title>Вся команда</title>
     <script defer src="/js/script.js"></script>
-    <link rel="stylesheet" href="/css/style.css">
-
 </head>
 <body>
     {{>modalMenu}}
@@ -27,7 +22,7 @@
                             <img src="/img/uploads/{{this.avatar}}" alt="Аватарка" class="teammate-img">
                             <div class="col teammate-text">
                                 <h4>{{this.firstname}} {{this.surname}}</h4>
-                                <p>{{inputHTML this.description}}</p>
+                                <div class="teammate-description">{{inputHTML this.description}}</div>
                                 <img src="/img/uploads/{{this.icon}}" class="teammate-icon" alt="Иконка специальности">
                             </div>
                         </div>
@@ -45,7 +40,7 @@
                             <img src="/img/uploads/{{this.avatar}}" alt="Аватарка" class="teammate-img">
                             <div class="col teammate-text">
                                 <h4>{{this.firstname}} {{this.surname}}</h4>
-                                <p>{{inputHTML this.description}}</p>
+                                <div class="teammate-description">{{inputHTML this.description}}</div>
                                 <img src="/img/uploads/{{this.icon}}" class="teammate-icon" alt="Иконка специальности">
                             </div>
                         </div>
