--- a/public/scss/_mixins.scss
+++ b/public/scss/_mixins.scss
@@ -143,7 +143,7 @@
     text-align: center;
     height: 215px;
     overflow: hidden;
-    p{
+    .teammate-description{
       height: 110px;
       overflow: hidden;
     }
@@ -173,7 +173,7 @@
     text-align: center;
     height: 290px;
     overflow: hidden;
-    >p{
+    .personal-card-description{
       max-height: 175px;
       overflow: hidden;
     }
