--- a/views/personal.hbs
+++ b/views/personal.hbs
@@ -1,14 +1,10 @@
 <!doctype html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    {{> head}}
     <title>Личный кабинет</title>
     <script defer src="/js/script.js"></script>
     <script defer src="/js/personal.js"></script>
-    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     {{>modalMenu}}
